Responsiveness fixed on mobile and tablet

--- a/src/App.module.css
+++ b/src/App.module.css
@@ -1,16 +1,25 @@
 body {
-    background-color: rgb(250, 250, 250);
+  background-color: rgb(250, 250, 250);
 }
 
 .container {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
 
 .image {
-    width: 350px;
-    height: auto;
-    margin-top: 50px;
+  width: 350px;
+  height: auto;
+  margin-top: 50px;
+}
+
+@media (max-width: 770px) {
+  .container {
+    margin: 0 10px;
+  }
+  .image {
+    width: 100%;
+  }
 }
